fixed headlines, css, aligning, fonts

--- a/envrmt/src/Components/Log-in/log-in.css
+++ b/envrmt/src/Components/Log-in/log-in.css
@@ -1,5 +1,5 @@
 .forgot-password {
-  font: inter;
+  font-family: Inter;
   color: #666666;
   font-weight: bold;
   background: none;
